added option to not correct penc u when using conservative approach, this recovers the reference data of rel-shock sample, which uses p%del2u for viscous force as del2 T0i by choosing lcorrect_penc_u=F

--- a/samples/1d-tests/rel-shock/start.in
+++ b/samples/1d-tests/rel-shock/start.in
@@ -18,6 +18,7 @@
   lconservative=T
   lrelativistic=T
   llorentz_as_aux=T
+  lcorrect_penc_u=F
 /
 &density_init_pars
   initlnrho='nolog-shock-tube', rho_left=1e-1, rho_right=1., widthlnrho=-.01
