--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,14 @@
 # Required
 version: 2
 
+# Set the OS, Python version and other tools you might need
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.11"
+
+
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    builder: html
@@ -16,7 +24,7 @@ formats:
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.6
+   #version: 3.6
    install:
    - requirements: doc/readthedocs/requirements.txt
    - method: setuptools
