added personal preference

--- a/.gitattributes
+++ b/.gitattributes
@@ -5011,6 +5011,7 @@ utils/axel/copy-var-to-var -text
 utils/axel/doN -text
 utils/axel/gitci -text
 utils/axel/global_run.in -text
+utils/axel/global_start.in -text
 utils/axel/mkdatadir_scratch -text
 utils/axel/move-VAR-to-data1 -text
 utils/axel/move_VAR_to_local_scratch.csh -text
