--- a/doc/readthedocs/requirements.txt
+++ b/doc/readthedocs/requirements.txt
@@ -7,10 +7,11 @@ scipy>=1.3.3
 matplotlib>=3.1.2
 Cython>=0.29.23
 dill>=0.3.3
-eqtools>=1.5
+eqtools==1.4.0
 pexpect>=4.8.0
 tqdm>=4.60.0
 vtk>=9.0.1
+setuptools==68.2.2
 sphinx-fortran
 sphinxcontrib.images
 GitPython
