--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,9 @@ version: 2
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.11"
+    python: "3.10"
+  apt_packages:
+    - gfortran
 
 
 
@@ -27,5 +29,5 @@ python:
    #version: 3.6
    install:
    - requirements: doc/readthedocs/requirements.txt
-   - method: setuptools
+   - method: pip
      path: python
