--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,6 +15,7 @@ build:
   jobs:
     install:
       - pip install setuptools==68.2.2 sphinx
+      - python -m pip install --exists-action=w --no-cache-dir -r doc/readthedocs/requirements.txt
 
 
 
