--- a/src/astaroth/DSL/solve_two.ac
+++ b/src/astaroth/DSL/solve_two.ac
@@ -16,6 +16,13 @@ fixed_boundary Kernel twopass_solve_final(int step_num)
   	        if (AC_izz_chiral__mod__chiral != 0) write(F_ZZ_CHIRAL,rk_final(F_ZZ_CHIRAL,step_num))
 #endif
 	        if (AC_iecr__mod__cdata != 0) write(F_ECR,rk_final(F_ECR,step_num))
+	        if(lchemistry)
+	        {
+	        	for i in 0:nchemspec
+	        	{
+	        		write(F_CHEMISTRY_SPECIES[i],rk_final(F_CHEMISTRY_SPECIES[i],step_num))
+	        	}
+	        }
 	}
 }
 #include "../steps_two.h"
