hydro.f90: made communicated=.true. for register_report_aux 'vv' magnetic.f90: cleaned up some comments disp_current.f90: added loverride_c_light (=.false. by default) to change c_light,   and marked two places with questionable code:   !16-sep-25/axel: but in this case, pGamma should not be needed.   !16-sep-25/axel: but curlb was already computed in calc_pencils_magnetic_pencpar (in magnetic). utils/axel/global_run.in and utils/axel/global_start.in: updates

--- a/utils/axel/global_start.in
+++ b/utils/axel/global_start.in
@@ -53,5 +53,13 @@
 /
 &particles_selfgrav_init_pars
 /
+&particles_stalker_init_pars
+/
 &special_init_pars
+/
+&backreact_infl_init_pars
+/
+&disp_current_init_pars
+/
+&gravitational_waves_hTXk_init_pars
 /
