--- a/utils/axel/global_run.in
+++ b/utils/axel/global_run.in
@@ -56,5 +56,13 @@
 /
 &particles_selfgrav_run_pars
 /
+&particles_stalker_run_pars
+/
 &special_run_pars
+/
+&backreact_infl_run_pars
+/
+&disp_current_run_pars
+/
+&gravitational_waves_hTXk_run_pars
 /
