Have lumi config by default be Cray since that is the canonical environment on LUMI

--- a/config/hosts/lumi/host-uan01-GNU_Linux.conf
+++ b/config/hosts/lumi/host-uan01-GNU_Linux.conf
@@ -34,38 +34,37 @@
 ###For Cray compiler uncomment below and comment alternative
 ###to load correct modules for Cray:
 ###source $PENCIL_HOME/config/hosts/lumi/lumi-gpu-cray-moduleinfo
-#%include compilers/Cray_MPI
-#%section Makefile
-#	# turn on software optimizations
-#	FC = ftn
-#	F90 = $(FC)
-#	CC = cc
-#	FFLAGS += -O3 -g -fPIC
-#	FFLAGS += -mcmodel=large
-#	#FFLAGS += -march=core-avx2
-#	CFLAGS += -O2 -D_GNU_SOURCE -fPIC
-#	#CFLAGS += -march=core-avx2
-#       LDFLAGS += -ldl -lpthread -Wl,--no-relax
-#%endsection Makefile
-###Cray end
-
-####For GNU compiler uncomment below and comment alternative
-####to load correct modules for GNU:
-####source $PENCIL_HOME/config/hosts/lumi/lumi-gpu-gnu-moduleinfo
-%include compilers/GNU-GCC_MPI
-#%include compilers/extensions/GNU-GCC_debug
+%include compilers/Cray_MPI
 %section Makefile
 	# turn on software optimizations
 	FC = ftn
 	F90 = $(FC)
 	CC = cc
-	FFLAGS += -O3 -g
-	FFLAGS += -mcmodel=large -fPIC
+	FFLAGS += -O0 -g -fPIC
 	#FFLAGS += -march=core-avx2
 	CFLAGS += -O2 -D_GNU_SOURCE -fPIC
 	#CFLAGS += -march=core-avx2
-	LDFLAGS += -ldl -lpthread -Wl,--no-relax
+       LDFLAGS += -ldl -lpthread -Wl,--no-relax
 %endsection Makefile
+##Cray end
+
+####For GNU compiler uncomment below and comment alternative
+####to load correct modules for GNU:
+####source $PENCIL_HOME/config/hosts/lumi/lumi-gpu-gnu-moduleinfo
+#%include compilers/GNU-GCC_MPI
+##%include compilers/extensions/GNU-GCC_debug
+#%section Makefile
+#	# turn on software optimizations
+#	FC = ftn
+#	F90 = $(FC)
+#	CC = cc
+#	FFLAGS += -O3 -g
+#	FFLAGS += -mcmodel=large -fPIC
+#	#FFLAGS += -march=core-avx2
+#	CFLAGS += -O2 -D_GNU_SOURCE -fPIC
+#	#CFLAGS += -march=core-avx2
+#	LDFLAGS += -ldl -lpthread -Wl,--no-relax
+#%endsection Makefile
 ####GNU end
 
 %section runtime
