Turn runtime-compilation on by default: this is the intended way to run PC-A

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -21,7 +21,7 @@ FOURIER            = nofourier
 GEOMETRICAL_TYPES  =   geometrical_types
 GHOSTFOLD          = noghostfold
 GPU                = nogpu
-RUNTIME_COMPILATION = off
+RUNTIME_COMPILATION = on
 GRID               =   grid
 GSL                = nogsl
 IMPLICIT_DIFFUSION = noimplicit_diffusion
