Second step has to get PC_SUB_STEP_NUMBER since control flow can be different between substeps (e.g. forcing done at the last substep)

--- a/src/astaroth/DSL/solve_two.ac
+++ b/src/astaroth/DSL/solve_two.ac
@@ -1,6 +1,6 @@
 #include "mhdsolver.ac"
 
-fixed_boundary Kernel twopass_solve_final(int step_num)
+fixed_boundary Kernel twopass_solve_final(PC_SUB_STEP_NUMBER step_num)
 {
 	if(AC_lcourant_dt__mod__cdata)
 	{
