If using GPU turn multithreading on by default

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -484,6 +484,7 @@ ifneq ($(SPECIAL),nospecial)
   endif
   ifneq ($(findstring gpu_astaroth, $(GPU)),)
     USE_SPECIAL_DISPATCHER=yes
+    override MULTITHREADING=openmp
   endif
 endif
 
