--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -484,8 +484,11 @@ ifneq ($(SPECIAL),nospecial)
   endif
   ifneq ($(findstring gpu_astaroth, $(GPU)),)
     USE_SPECIAL_DISPATCHER=yes
-    override MULTITHREADING=openmp
   endif
+endif
+ifneq ($(findstring gpu_astaroth, $(GPU)),)
+    override MULTITHREADING=openmp
+    override MPICOMM=mpicomm
 endif
 
 ifeq ($(USE_SPECIAL_DISPATCHER),yes)
