--- a/.gitattributes
+++ b/.gitattributes
@@ -3966,6 +3966,21 @@ samples/testfield_nonlin_z/start.in -text
 samples/testfield_nonlin_z/video.in -text
 samples/testfield_nonlin_z/xyaver.in -text
 samples/testfield_nonlin_z/zaver.in -text
+samples/testfield_x/README.md -text
+samples/testfield_x/k.dat -text
+samples/testfield_x/print.in -text
+samples/testfield_x/reference.out -text
+samples/testfield_x/run.in -text
+samples/testfield_x/src/.build-history -text
+samples/testfield_x/src/.buildinfo -text
+samples/testfield_x/src/.buildtime -text
+samples/testfield_x/src/.current-precision -text
+samples/testfield_x/src/Makefile.local -text
+samples/testfield_x/src/cparam.local -text
+samples/testfield_x/start.in -text
+samples/testfield_x/xyaver.in -text
+samples/testfield_x/xzaver.in -text
+samples/testfield_x/yzaver.in -text
 samples/testfield_xz/NEVERLOCK -text
 samples/testfield_xz/README -text
 samples/testfield_xz/k.dat -text
