--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,25 @@ src/astaroth/PC_*
 !samples/Schwinger/.run_directories.log
 !samples/Schwinger/pc_build_tmp_*
 !samples/Schwinger/.pc_build_history
+!samples/testfield_x/src/.DS_Store
+!samples/testfield_x/src/*.directory
+!samples/testfield_x/src/*.pyc
+!samples/testfield_x/src/*~
+!samples/testfield_x/src/.*.swp
+!samples/testfield_x/src/host-ID
+!samples/testfield_x/src/revision.txt
+!samples/testfield_x/src/*-eps-converted-to.pdf
+!samples/testfield_x/src/.run_directories.log
+!samples/testfield_x/src/pc_build_tmp_*
+!samples/testfield_x/src/.pc_build_history
+!samples/testfield_x/.DS_Store
+!samples/testfield_x/*.directory
+!samples/testfield_x/*.pyc
+!samples/testfield_x/*~
+!samples/testfield_x/.*.swp
+!samples/testfield_x/host-ID
+!samples/testfield_x/revision.txt
+!samples/testfield_x/*-eps-converted-to.pdf
+!samples/testfield_x/.run_directories.log
+!samples/testfield_x/pc_build_tmp_*
+!samples/testfield_x/.pc_build_history
