--- a/samples/supernova-driven-turbulence/cpu-ssd-box/run.in
+++ b/samples/supernova-driven-turbulence/cpu-ssd-box/run.in
@@ -3,7 +3,7 @@
 !  run parameters for interstellar
 !
 &run_pars
-  cvsid="5cad3a769"
+  cvsid="469160fac"
   nt=500, it1=25, isave=5000, itorder=4, tmax=0.04
   dtmin=1e-13
   dt_epsi=1e-9, dtdec=0.5, dtinc=0.5, dt_ratio=1e-7
@@ -13,7 +13,7 @@
   timestep_scaling=8*"rel_err"
   dsnap=0.01, dvid=0.00025, slice_position='p'
   ip=1963
-  lshock_heat=F
+  lshock_heat=T
   lpencil_check=F
   lpencil_check_small=F
   lbidiagonal_derij=F  !(use the slightly more accurate formulation for derij)
@@ -26,7 +26,7 @@
 /
 &viscosity_run_pars
   ivisc='nu-shock','hyper3-nu-const','nu-const'
-  nu_shock=1., nu_hyper3=7.5e-12, nu=1e-3
+  nu_shock=1., nu_hyper3=1e-10, nu=1e-3
 /
 &density_run_pars
   diffrho_shock=1.
@@ -39,22 +39,22 @@
 &entropy_run_pars
   iheatcond='shock','hyper3'
   chi_shock=1.
-  chi_hyper3=7.5e-12
+  chi_hyper3=1e-10
   lrhs_max=F
 /
 &magnetic_run_pars
   iresistivity='hyper3','eta-const'
-  eta_hyper3=7.5e-12,eta=1e-3
+  eta_hyper3=1e-10,eta=1e-3
   lrhs_max=F
 /
 &interstellar_run_pars
 !! adjust SN radius above rfactor_SN for diffuse ISM
   luniform_zdist_SNI=T
   lSN_scale_rad=T
-  ltrim_profile=F
+  ltrim_profile=T
   N_mass=120.0
   width_SN=0.012
-  rfactor_SN=5.0
+  rfactor_SN=4.0
   SNI_factor=0.5
   SNII_factor=0.5
   lSN_autofrackin=F
