--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -22,6 +22,7 @@ GEOMETRICAL_TYPES  =   geometrical_types
 GHOSTFOLD          = noghostfold
 GPU                = nogpu
 RUNTIME_COMPILATION = on
+TRANSPILATION       = off
 GRID               =   grid
 GSL                = nogsl
 IMPLICIT_DIFFUSION = noimplicit_diffusion
@@ -3091,7 +3092,7 @@ libPC.so: run.o | $(SPECIAL_DEPS) $(LIBGPU)
 #
 #$(LIBGPU): $(GPU_DEPS)
 $(LIBGPU): $(CUDA_INCDIR)/PC_moduleflags.h $(CUDA_MAKEDIR)/Makefile.vendor
-	cd astaroth && make MPICOMM=$(MPICOMM) RUNTIME_COMPILATION=$(RUNTIME_COMPILATION) TRAINING=$(TRAINING)
+	cd astaroth && make MPICOMM=$(MPICOMM) RUNTIME_COMPILATION=$(RUNTIME_COMPILATION) TRAINING=$(TRAINING) TRANSPILATION=$(TRANSPILATION)
 #
 special_preps:
 ifeq ($(USE_SPECIAL_DISPATCHER),no)
