--- a/src/astaroth/DSL/solve_two.ac
+++ b/src/astaroth/DSL/solve_two.ac
@@ -2,7 +2,7 @@
 
 fixed_boundary Kernel twopass_solve_final(PC_SUB_STEP_NUMBER step_num)
 {
-	if(AC_lcourant_dt__mod__cdata)
+	if(lcourant_dt)
 	{
 		if(AC_iuu__mod__cdata != 0) 
 		{
